# abitur_help

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile  faq.json  schema.sql
backend/src/: db.rs  faq.rs  loader.rs  main.rs  models.rs
frontend/: Dockerfile  admin.html  index.html
telegram_bot/: bot_token.py  main.py  question_and_answers.py  site_mai_links.py
