[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.0"
serde = {version = "1.0.228", features = ["derive"]}
sqlx = { version = "0.8.6", features = ["mysql", "macros", "chrono", "runtime-tokio-rustls"] }
config = "0.14"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.11.8"
dotenvy = "0.15.7"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
actix-cors = "0.7.1"
